--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     background-color: #eeeff1;
     padding: 80px 0 0 400px;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .nav-bar {
